[package]
name = "mapchanges"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
quick-xml = { version = "0.31", features = ["serialize"] }
serde-xml-rs = "0.5.1"
flate2 = "1.0.30"
serde_yaml = "0.8"
