[package]
name = "geocuvar"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde-xml-rs = "0.6"
flate2 = "1.0"
serde_yaml = "0.9"
xml = "0.8"
chrono = "0.4"
